# ironclaw

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FEATURE_PARITY.md  README.ja.md  README.ko.md  README.md  README.ru.md  README.zh-CN.md  build.rs  deny.toml  providers.json  railway.toml  trace_20260305T005755.json  trace_20260305T080050.json  trace_20260305T090504.json  trace_20260305T090748.json  trace_20260305T093121.json  trace_20260305T094606.json  trace_20260305T104946.json  trace_20260306T153905.json  trace_20260306T160801.json  trace_20260306T175725.json  trace_20260306T182246.json  trace_20260306T204733.json  trace_20260306T211304.json  trace_20260306T214637.json  trace_20260306T220327.json  trace_20260306T221409.json  trace_20260306T222121.json
.claude/rules/: database.md  skills.md  testing.md  tools.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: qa-bug.yml
.github/workflows/: claude-review.yml  code_style.yml  coverage.yml  docker.yml  e2e.yml  pr-label-classify.yml  pr-label-scope.yml  regression-test-check.yml  release-plz-batch-summary.yml  release-plz.yml  release.yml  staging-ci.yml  staging-promotion-metadata.yml  test.yml
benches/: safety_check.rs  safety_pipeline.rs
channels-src/telegram/: telegram.capabilities.json
crates/ironclaw_common/: Cargo.toml
crates/ironclaw_common/src/: event.rs  lib.rs  timezone.rs
crates/ironclaw_engine/: CLAUDE.md  Cargo.toml  MONTY.md
crates/ironclaw_engine/orchestrator/: default.py
crates/ironclaw_engine/prompts/: codeact_postamble.md  codeact_preamble.md  mission_conversation_insights.md  mission_expected_behavior.md  mission_self_improvement.md  mission_skill_extraction.md  mission_skill_repair.md
crates/ironclaw_engine/src/: lib.rs  reliability.rs
crates/ironclaw_engine/src/capability/: lease.rs  mod.rs  planner.rs  policy.rs  registry.rs
crates/ironclaw_engine/src/executor/: compaction.rs  context.rs  loop_engine.rs  mod.rs  orchestrator.rs  prompt.rs  scripting.rs  structured.rs  trace.rs
crates/ironclaw_engine/src/gate/: lease.rs  mod.rs  pipeline.rs  tool_tier.rs
crates/ironclaw_engine/src/memory/: mod.rs  retrieval.rs  skill_tracker.rs  store.rs
crates/ironclaw_engine/src/runtime/: conversation.rs  lease_refresh.rs  manager.rs  messaging.rs  mission.rs  mod.rs  tree.rs
crates/ironclaw_engine/src/traits/: effect.rs  llm.rs  mod.rs  store.rs  workspace.rs
crates/ironclaw_engine/src/types/: capability.rs  conversation.rs  error.rs  event.rs  memory.rs  message.rs  mission.rs  mod.rs  project.rs  provenance.rs  step.rs  thread.rs
crates/ironclaw_gateway/: Cargo.toml
crates/ironclaw_gateway/src/: assets.rs  bundle.rs  layout.rs  lib.rs  widget.rs
crates/ironclaw_gateway/static/: app.js  i18n-app.js  index.html  style.css  theme-init.js
crates/ironclaw_gateway/static/i18n/: en.js  index.js  ko.js  zh-CN.js
crates/ironclaw_gateway/static/js/core/: history.js  init-auth.js
crates/ironclaw_gateway/static/js/surfaces/: chat.js  skills.js
crates/ironclaw_safety/: Cargo.toml
crates/ironclaw_safety/src/: leak_detector.rs  lib.rs  sensitive_paths.rs
crates/ironclaw_skills/: Cargo.toml
crates/ironclaw_skills/src/: catalog.rs  gating.rs  lib.rs  parser.rs  registry.rs  selector.rs  types.rs  v2.rs  validation.rs
crates/ironclaw_tui/: CLAUDE.md  Cargo.toml
crates/ironclaw_tui/examples/: dev.rs
crates/ironclaw_tui/src/: app.rs  event.rs  input.rs  layout.rs  lib.rs  render.rs  spinner.rs  theme.rs
crates/ironclaw_tui/src/widgets/: approval.rs  command_palette.rs  conversation.rs  header.rs  help_overlay.rs  input_box.rs  logs.rs  mod.rs  model_picker.rs  registry.rs  status_bar.rs  tab_bar.rs  thread_list.rs  thread_picker.rs  tool_panel.rs
docs/: .mintignore  docs.json  engine-v2-architecture.md  index.mdx  onboard.mdx  quickstart.mdx  security.mdx  self-improvement.md  style.css  tunnel.mdx
docs/capabilities/: llm-providers.md  mcp.md  overview.mdx  sandboxed-tools.mdx  skills.mdx
docs/channels/: building-a-channel.mdx  discord.mdx  local.md  overview.mdx  signal.mdx  telegram.mdx  webhook.mdx
docs/extensions/: building-a-tool.md  file-tools.mdx  github.md  mcp.mdx  overview.mdx  shell.mdx  web-search.md
docs/infrastructure/: amazon.mdx  droplet.mdx
docs/internal/: USER_MANAGEMENT_API.md  development-history.md  engine-v2-architecture.md  self-improvement.md
migrations/: V16__document_versions.sql  V17__user_identities.sql  V21__backfill_conversation_source_channel.sql  V22__sandbox_restart_params.sql  V23__list_workspace_files_escape_like.sql
profiles/: local-sandbox.toml  local.toml  server-multitenant.toml  server.toml
registry/: _bundles.json
scripts/: build-wasm-extensions.sh  check-i18n-parity.sh  check_no_panics.py  pre-commit-safety.sh  test-ci-artifact-naming.sh
src/: NETWORK_SECURITY.md  app.rs  boot_screen.rs  code_challenge.rs  error.rs  http_intercept.rs  lib.rs  main.rs  settings.rs  tenant.rs  testing.rs
tests/: admin_system_prompt.rs  admin_tool_policy_e2e.rs  e2e_advanced_traces.rs  e2e_approval_traces.rs  e2e_attachments.rs  e2e_auth_gate_traces.rs  e2e_builtin_tool_coverage.rs  e2e_engine_v2.rs  e2e_gateway_trace_harness.rs  e2e_live.rs  e2e_live_mission.rs  e2e_live_personas.rs  e2e_response_order.rs  e2e_routine_heartbeat.rs  e2e_status_events.rs  e2e_telegram_message_routing.rs  e2e_workspace_coverage.rs  engine_v2_gate_integration.rs  engine_v2_skill_codeact.rs  heartbeat_integration.rs  layered_memory.rs  module_init_integration.rs  multi_tenant_integration.rs  oauth_greeting_integration.rs  openai_compat_integration.rs  ownership_integration.rs  signing_integration.rs  skill_credential_injection.rs  slack_auth_integration.rs  staging_regression_fixes.rs  support_unit_tests.rs  telegram_auth_integration.rs  tool_schema_validation.rs  wit_compat.rs  workspace_integration.rs  ws_gateway_integration.rs
tools-src/google-drive/: Cargo.toml  google-drive-tool.capabilities.json
tools-src/google-drive/src/: lib.rs  types.rs
(+513 files in other folders)
