[package]
name = "ironclaw_gateway"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Gateway frontend assets, layout configuration, and widget extension system for IronClaw"
license = "MIT OR Apache-2.0"

[package.metadata.dist]
dist = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
