[package]
name = "ironclaw_skills"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Skill selection, scoring, and management for IronClaw"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"

[package.metadata.dist]
dist = false

[features]
default = ["registry", "catalog"]
registry = ["dep:tempfile"]
catalog = ["dep:reqwest", "dep:urlencoding", "dep:futures"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["sync", "process", "fs"] }
tracing = "0.1"

# Optional (catalog feature)
futures = { version = "0.3", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"], optional = true }
urlencoding = { version = "2", optional = true }

# Optional (registry feature — tempfile needed for dev-dep in tests, but also
# the registry module itself uses no extra deps beyond tokio::fs)
tempfile = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
