[package]
name = "ironclaw_tui"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Modular Ratatui-based TUI for IronClaw"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"

[features]
default = ["clipboard"]
clipboard = ["dep:arboard", "dep:image"]

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
tui-textarea = { version = "0.7", features = ["crossterm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "macros", "rt", "time"] }
chrono = "0.4"
unicode-width = "0.2"
pulldown-cmark = { version = "0.12", default-features = false }
thiserror = "2"
tracing = "0.1"
arboard = { version = "3", optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
