[package]
name = "google-drive-tool"
version = "0.2.0"
edition = "2021"
description = "Google Drive integration tool for IronClaw (WASM component)"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "=0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Auto-derives the JSON Schema from the GoogleDriveAction tagged enum so the
# advertised schema can never drift from the serde-enforced contract. Without
# this we'd hand-write a flat schema that tells the LLM "all fields optional"
# while serde rejects calls that omit per-variant required fields.
schemars = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
